@@ -2,10 +2,10 @@ package org.openas2.processor.receiver;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.logging.Log;
@@ -14,7 +14,7 @@ import org.openas2.OpenAS2Exception;
 import org.openas2.Session;
 import org.openas2.message.Message;
 import org.openas2.params.InvalidParameterException;
-import org.openas2.util.IOUtilOld;
+import org.openas2.util.IOUtil;
 
 public abstract class DirectoryPollingModule extends PollingModule
 {
@@ -34,21 +34,35 @@ public abstract class DirectoryPollingModule extends PollingModule
 		try
 		{
 			outboxDir = getParameter(PARAM_OUTBOX_DIRECTORY, true);
-			IOUtilOld.getDirectoryFile(outboxDir);
+			IOUtil.getDirectoryFile(outboxDir);
 			errorDir = getParameter(PARAM_ERROR_DIRECTORY, true);
-			IOUtilOld.getDirectoryFile(errorDir);
+			IOUtil.getDirectoryFile(errorDir);
 			sentDir = getParameter(PARAM_SENT_DIRECTORY, false);
 			if (sentDir != null)
-				IOUtilOld.getDirectoryFile(sentDir);
+				IOUtil.getDirectoryFile(sentDir);
             String pendingInfoFolder = getSession().getProcessor().getParameters().get("pendingmdninfo");
-            IOUtilOld.getDirectoryFile(pendingInfoFolder);
+            IOUtil.getDirectoryFile(pendingInfoFolder);
             String pendingFolder = getSession().getProcessor().getParameters().get("pendingmdn");
-            IOUtilOld.getDirectoryFile(pendingFolder);
+            IOUtil.getDirectoryFile(pendingFolder);
 
 		} catch (IOException e)
 		{
 			throw new OpenAS2Exception("Failed to initialise directory poller.", e);
 		}
+	}
+
+    @Override
+	public boolean healthcheck(List<String> failures)
+	{
+    	try
+		{
+			IOUtil.getDirectoryFile(outboxDir);
+		} catch (IOException e)
+		{
+			failures.add(this.getClass().getSimpleName() + " - Polling directory is not accessible: " + outboxDir);
+			return false;
+		}
+    	return true;
 	}
 
 	public void poll()
@@ -71,11 +85,11 @@ public abstract class DirectoryPollingModule extends PollingModule
 
 	protected void scanDirectory(String directory) throws IOException, InvalidParameterException
 	{
-		File dir = IOUtilOld.getDirectoryFile(directory);
+		File dir = IOUtil.getDirectoryFile(directory);
 		String extensionFilter = getParameter(PARAM_FILE_EXTENSION_FILTER, "");
 
 		// get a list of entries in the directory
-		File[] files = extensionFilter.length() > 0 ? IOUtilOld.getFiles(dir, extensionFilter) : dir.listFiles();
+		File[] files = extensionFilter.length() > 0 ? IOUtil.getFiles(dir, extensionFilter) : dir.listFiles();
 		if (files == null)
 		{
 			throw new InvalidParameterException("Error getting list of files in directory", this,
@@ -159,10 +173,10 @@ public abstract class DirectoryPollingModule extends PollingModule
             } else
             {
                 // if the file length has changed, update the tracker
-				long newLength = file.length();
+		long newLength = file.length();
                 if (newLength != fileLength)
                 {
-                    trackedFiles.put(fileEntry.getKey(), new Long(newLength));
+                    trackedFiles.put(fileEntry.getKey(), Long.valueOf(newLength));
                 } else
                 {
                     // if the file length has stayed the same, process the file
@@ -175,7 +189,7 @@ public abstract class DirectoryPollingModule extends PollingModule
                         e.terminate();
                         try
                         {
-                            IOUtilOld.handleError(file, errorDir);
+                            IOUtil.handleError(file, errorDir);
                         } catch (OpenAS2Exception e1)
                         {
                             logger.error("Error handling file error for file: " + file.getAbsolutePath(), e1);
@@ -197,17 +211,17 @@ public abstract class DirectoryPollingModule extends PollingModule
 		if (logger.isInfoEnabled())
 			logger.info("processing " + file.getAbsolutePath());
 
-		try
+		try (FileInputStream in = new FileInputStream(file))
 		{
-			processDocument(new FileInputStream(file), file.getName());
+			processDocument(in, file.getName());
 			try
 			{
-				IOUtilOld.deleteFile(file);
+				IOUtil.deleteFile(file);
 			} catch (IOException e)
 			{
 				throw new OpenAS2Exception("Failed to delete file handed off for processing:" + file.getAbsolutePath(), e);
 			}
-		} catch (FileNotFoundException e)
+		} catch (IOException e)
 		{
 			throw new OpenAS2Exception("Failed to process file:" + file.getAbsolutePath(), e);
 		}
